--- a/configuration/linux/.dotfiles/waybar/style.css
+++ b/configuration/linux/.dotfiles/waybar/style.css
@@ -1,8 +1,7 @@
 @import url("../../.cache/wal/colors-waybar.css");
-
 * {
     font-size: 15px;
-    font-family: "JetBrainsMono Nerd Font", monospace;
+    font-family: "CodeNewRoman Nerd Font Propo";
 }
 
 window#waybar {
@@ -47,13 +46,16 @@ tooltip label {
 #custom-notification:hover,
 #bluetooth:hover,
 #network:hover,
-#battery:hover {
+#battery:hover,
+#cpu:hover,
+#memory:hover,
+#temperature:hover {
     transition: all 0.3s ease;
     color: @color9;
 }
 
 #custom-notification {
-    padding: 0px 20px;
+    padding: 0px 5px;
     transition: all 0.3s ease;
     color: @color7;
 }
@@ -72,45 +74,60 @@ tooltip label {
 
 #workspaces {
     padding: 0px 5px;
+    text-shadow: none;
 }
 
 #workspaces button {
     all: unset;
-    padding: 0px 5px;
-    color: alpha(@color9, 0.4);
-    transition: all 0.2s ease;
+    margin: 0px 3px;
+    padding: 0px 2px;
+    color: rgba(0, 0, 0, 0);
+    text-shadow: none;
+    background: @color2;
+    border-radius: 50%;
+    transition: all 0.3s;
+    min-width: 15px;
 }
 
 #workspaces button:hover {
     color: rgba(0, 0, 0, 0);
     border: none;
-    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.5);
-    transition: all 1s ease;
+    background: @color1;
 }
 
 #workspaces button.active {
-    color: @color9;
     border: none;
-    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+    padding: 0px 2px;
+    border-radius: 10px;
+    background: @color1;
+    min-width: 30px;
+}
+
+#workspaces button.active:hover {
+    background: @color2;
 }
 
 #workspaces button.empty {
-    color: rgba(0, 0, 0, 0);
+    color: transparent;
     border: none;
-    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.2);
+    background: alpha(@background, 0.5);
 }
 
 #workspaces button.empty:hover {
     color: rgba(0, 0, 0, 0);
     border: none;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.5);
-    transition: all 1s ease;
 }
 
 #workspaces button.empty.active {
-    color: @color9;
+    color: rgba(0, 0, 0, 0);
     border: none;
-    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+    text-shadow: none;
+    background: @color1;
+}
+
+#workspaces button.empty.active:hover {
+    background: @color2;
 }
 
 #bluetooth {
