--- a/configuration/linux/.dotfiles/waybar/style.css
+++ b/configuration/linux/.dotfiles/waybar/style.css
@@ -1,7 +1,8 @@
 @import url("../../.cache/wal/colors-waybar.css");
+
 * {
     font-size: 15px;
-    font-family: "CodeNewRoman Nerd Font Propo";
+    font-family: "JetBrainsMono Nerd Font", monospace;
 }
 
 window#waybar {
@@ -46,16 +47,13 @@ tooltip label {
 #custom-notification:hover,
 #bluetooth:hover,
 #network:hover,
-#battery:hover,
-#cpu:hover,
-#memory:hover,
-#temperature:hover {
+#battery:hover {
     transition: all 0.3s ease;
     color: @color9;
 }
 
 #custom-notification {
-    padding: 0px 5px;
+    padding: 0px 20px;
     transition: all 0.3s ease;
     color: @color7;
 }
@@ -74,60 +72,45 @@ tooltip label {
 
 #workspaces {
     padding: 0px 5px;
-    text-shadow: none;
 }
 
 #workspaces button {
     all: unset;
-    margin: 0px 3px;
-    padding: 0px 2px;
-    color: rgba(0, 0, 0, 0);
-    text-shadow: none;
-    background: @color2;
-    border-radius: 50%;
-    transition: all 0.3s;
-    min-width: 15px;
+    padding: 0px 5px;
+    color: alpha(@color9, 0.4);
+    transition: all 0.2s ease;
 }
 
 #workspaces button:hover {
     color: rgba(0, 0, 0, 0);
     border: none;
-    background: @color1;
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.5);
+    transition: all 1s ease;
 }
 
 #workspaces button.active {
+    color: @color9;
     border: none;
-    padding: 0px 2px;
-    border-radius: 10px;
-    background: @color1;
-    min-width: 30px;
-}
-
-#workspaces button.active:hover {
-    background: @color2;
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
 }
 
 #workspaces button.empty {
-    color: transparent;
+    color: rgba(0, 0, 0, 0);
     border: none;
-    background: alpha(@background, 0.5);
+    text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.2);
 }
 
 #workspaces button.empty:hover {
     color: rgba(0, 0, 0, 0);
     border: none;
     text-shadow: 0px 0px 1.5px rgba(0, 0, 0, 0.5);
+    transition: all 1s ease;
 }
 
 #workspaces button.empty.active {
-    color: rgba(0, 0, 0, 0);
+    color: @color9;
     border: none;
-    text-shadow: none;
-    background: @color1;
-}
-
-#workspaces button.empty.active:hover {
-    background: @color2;
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
 }
 
 #bluetooth {
